--- a/diceserver/Gemfile
+++ b/diceserver/Gemfile
@@ -7,3 +7,6 @@ source "https://rubygems.org"
 gem "bcdice", "~> 3.11"
 
 gem "test-unit", "~> 3.6"
+
+gem "sinatra", "~> 4.0"
+gem "rackup", "~> 2.1"
