--- a/diceserver/Gemfile
+++ b/diceserver/Gemfile
@@ -6,7 +6,7 @@ source 'https://rubygems.org'
 
 gem 'bcdice', '~> 3.11'
 
-gem 'test-unit', '~> 3.6'
+gem 'rspec'
 
 gem 'rackup', '~> 2.1'
 gem 'sinatra', '~> 4.0'
